# TagVision

./: .gitignore  .gitmodules  Cargo.toml  Toolchain-OrangePi.cmake  Toolchain-Windows.cmake  build.rs  build_apriltag.sh  build_orangepi.sh  clear_build.sh  config.json  config2.json  nt4Server.py
IPPE/cpp/include/IPPE/: ippe.h
solvepnp/: .gitignore  CMakeLists.txt  core.hpp  precomp.hpp  sqpnp.cpp  sqpnp.hpp
src/: config.rs  main.rs  module.rs  output.rs  sys.rs  test.rs  util.rs
src/cam/: fake.rs  gstreamer.rs  lookup.rs  mod.rs  native.rs  uvc.rs  v4l.rs
src/cv/: distort.rs  geom.rs  img_utils.rs  mod.rs
src/cv/apriltag/: ffi.rs  layout.rs  mod.rs  params.rs
src/cv/apriltag/layouts/: 2025-welded.json  2026-andymark.json  2026-welded.json
src/cv/solve/: homography.rs  ippe.rs  mod.rs  p3p.rs  polynomial.rs
src/output/: cs.rs  mod.rs  photo_log.rs  utils.rs
src/runtime/: mod.rs  vision.rs
