[package]
name = "tag_vision"
version = "0.1.0"
edition = "2021"

[profile.release]
debug = 2

[dependencies]
approx = "0.5.1"
crossbeam-queue = "0.3.12"
gstreamer = { version = "0.23.5", optional = true }
image = "0.25.6"
imageproc = "0.25.0"
libc = "0.2.171"
nalgebra = "0.33.2"
nokhwa = { version = "0.10.10", optional = true }
nt_client = "0.4.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
tokio = { version = "1.44.2", features = ["rt-multi-thread"] }
uvc = { version = "0.2.0", optional = true }

[features]
default = ["gstreamer", "native"]
gstreamer = ["dep:gstreamer"]
uvc = ["dep:uvc"]
native = ["dep:nokhwa"]
