[package]
name = "tag_vision"
version = "0.1.0"
edition = "2021"

[profile.release]
debug = 2

[dependencies]
approx = "0.5.1"
async-stream = "0.3.6"
bytes = "1.11.1"
clap = { version = "4.5.60", features = ["derive"] }
crossbeam-queue = "0.3.12"
gstreamer = { version = "0.23.5", optional = true }
http-body-util = "0.1.3"
hyper = { version = "1.8.1", features = ["server", "http1"] }
hyper-util = { version = "0.1.20", features = ["tokio"] }
image = "0.25.6"
imageproc = "0.25.0"
libc = "0.2.171"
local-ip-address = "0.6.10"
nalgebra = "0.33.2"
nt_client = { version = "0.4.0", git = "https://github.com/lobsterwise/nt_client.git", features = [
	"struct",
	"math",
] }
nt_client_macros = { version = "0.1.0", git = "https://github.com/lobsterwise/nt_client.git" }
rayon = "1.11.0"
rmpv = "1.3.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
tokio = { version = "1.44.2", features = ["rt-multi-thread"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
turbojpeg = { version = "1.4.0", features = ["image"] }

[features]
default = ["native"]
gstreamer = ["dep:gstreamer"]
native = ["dep:nokhwa"]

[target.'cfg(target_os = "windows")'.dependencies]
nokhwa = { version = "0.10.10", optional = true, features = ["input-msmf"] }

[target.'cfg(target_os = "linux")'.dependencies]
nokhwa = { version = "0.10.10", optional = true, features = ["input-v4l"] }
